itinerary: fix z-index of highlights title

--- a/assets/css/sass/content/components/_cycle-slider.scss
+++ b/assets/css/sass/content/components/_cycle-slider.scss
@@ -5,7 +5,7 @@
 
 .slideshow-header {
 	position: absolute;
-	z-index: 100;
+	z-index: 200;
 	margin: 0;
 	top: 1em;
 	left: 5vw;
@@ -26,7 +26,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 999;
+	z-index: 100;
 	color: #fff;
 	padding: 0 5vw;
 	height: 100%;
